--- a/publish_baemin/src/App.css
+++ b/publish_baemin/src/App.css
@@ -6,6 +6,8 @@
     url('./fonts/custom-icons.woff2') format("woff");
 }
 
+/*
+
 @font-face {
 	font-family: 'Web Noto Sans KR';
 	font-style: normal;
@@ -26,35 +28,41 @@
 	font-weight: 700;
 	src: url('./fonts/NotoSansKR-Bold.woff2') format('woff2'),
     	url('./fonts/NotoSansKR-Bold.woff2') format("woff");
-}
+} */
 
-/*
-@font-face {
+/* @font-face {
 	font-family: 'Web Noto Sans KR';
 	font-style: normal;
 	font-weight: 100;
-	src: url(../images/font/noto/NotoSansKR-Thin.woff2) format('woff2'),
-		url(../images/font/noto/NotoSansKR-Thin.woff) format('woff'),
-		url(../images/font/noto/NotoSansKR-Thin.ttf) format('truetype');
+	src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Thin.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Thin.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Thin.otf) format('opentype');
 }
+
+
 
 @font-face {
 	font-family: 'Web Noto Sans KR';
 	font-style: normal;
 	font-weight: 300;
-	src: url(../images/font/noto/NotoSansKR-Light.woff2) format('woff2'),
-		url(../images/font/noto/NotoSansKR-Light.woff) format('woff'),
-		url(../images/font/noto/NotoSansKR-Light.ttf) format('truetype');
-}
-@font-face {
-	font-family: 'Web Noto Sans KR';
-	font-style: normal;
-	font-weight: 900;
-	src: url(../images/font/noto/NotoSansKR-Black.woff2) format('woff2'),
-		url(../images/font/noto/NotoSansKR-Black.woff) format('woff'),
-		url(../images/font/noto/NotoSansKR-Black.ttf) format('truetype');
-}
-*/
+	src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Light.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Light.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Light.otf) format('opentype');
+} */
+
+
+
+@font-face {font-family: 'Web Noto Sans KR';font-style: normal;font-weight: 400;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.otf) format('opentype');}
+
+
+
+@font-face {font-family: 'Web Noto Sans KR';font-style: normal;font-weight: 500;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Medium.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Medium.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Medium.otf) format('opentype');}
+
+
+
+@font-face {font-family: 'Web Noto Sans KR';font-style: normal;font-weight: 700;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Bold.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Bold.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Bold.otf) format('opentype');}
+
+
+
+@font-face {font-family: 'Web Noto Sans KR';font-style: normal;font-weight: 900;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.otf) format('opentype');}
+
+
 
 
 
